# meredith

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CROSSWALK.md  LICENSE  Makefile  README.md  SECURITY.md  add_env_substitution.py  pyproject.toml  random.json  update_config.py
.agents/skills/agent-handoff/: SKILL.md
.agents/skills/agentic-improvements/: SKILL.md
.agents/skills/agentic-improvements/references/: ANALYSIS_FINDINGS.md  INNOVATIONS.md  STRATEGIES.md
.agents/skills/code-review/: SKILL.md
.agents/skills/readme-writing/: SKILL.md
.agents/skills/readme-writing/references/: CHECKLIST.md  TEMPLATES.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  security.yml
config/: base.yaml  large_model.yaml  local_model.yaml  mid_model.yaml
scripts/: test_tool_calling.py
skills/code_review/: SKILL.md
skills/debugging/: SKILL.md
src/coding_agent/: __init__.py  config.py  main.py  types.py
src/coding_agent/acp/: server.py
src/coding_agent/agent/: __init__.py  core.py  planner.py  verifier.py
src/coding_agent/context/: __init__.py  budget.py  compactor.py  compressor.py  manager.py
src/coding_agent/llm/: __init__.py  base.py  local.py  remote.py
src/coding_agent/mcp/: __init__.py  client.py  server.py
src/coding_agent/memory/: __init__.py  store.py
src/coding_agent/rag/: __init__.py  chunker.py  indexer.py  retriever.py
src/coding_agent/recovery/: __init__.py  detector.py  strategies.py
src/coding_agent/tools/: __init__.py  base.py  fs.py  git.py  preferences.py  router.py  search.py  shell.py  text_mode_parser.py  web.py
tests/: conftest.py  test_budget.py  test_compressor.py  test_config.py  test_context_manager.py  test_detector.py  test_graph.py  test_import.py  test_llm_base.py  test_memory.py  test_planner.py  test_router.py  test_strategies.py  test_tool_base.py  test_types.py  test_verifier.py
