[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coding-agent"
version = "0.1.0"
description = "A cutting-edge AI coding agent with RAG, MCP, and smart context management"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"

dependencies = [
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
rag = [
    "tree-sitter-languages>=1.10,<2",
]
mlx = [
    "mlx>=0.16,<1",
    "mlx-lm>=0.18,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
coding-agent = "coding_agent.main:cli"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
