[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meredith-agent"
version = "0.2.9"
description = "A modern AI coding agent with RAG, ACP, and smart context management"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
authors = [
    {name = "Sagar Shirwalkar", email = "shirwalkarsagar0@gmail.com"},
]
urls = {Homepage = "https://github.com/sagar-shirwalkar/meredith", Source = "https://github.com/sagar-shirwalkar/meredith"}

dependencies = [
    "agent-client-protocol>=0.10,<1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.16,<1",
    "mlx-lm>=0.18,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.11",
    "ruff>=0.5",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
    "types-PyYAML>=6.0",
]

[project.scripts]
meredith = "coding_agent.main:cli"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/coding_agent"]

[tool.pyright]
venv = ".venv"
venvPath = "."
typeCheckingMode = "standard"
